# fragcore

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-variants.yaml
frag-core/: CMakeLists.txt  fragcore.pc.in
frag-core/cmake/: cxxconfig.cmake  exceptcxx.cmake  glm.cmake  infoware.cmake  libassert.cmake  spdlog.cmake  taskscheduler.cmake
frag-core/include/: Def.h  EventController.h  FileChangeEvent.h  FileNotify.h  Font.h  FontFactory.h  FragCore.h  FragDef.h  IFileNotify.h  Image.h  Prerequisites.h  TextureFactory.h  fragcore_revision.h  fragcore_revision.h.in
frag-core/include/Audio/: AudioCapture.h  AudioClip.h  AudioDesc.h  AudioEncoder.h  AudioFactory.h  AudioInterface.h  AudioListener.h  AudioObject.h  AudioPhysicalDevice.h  AudioReverb.h  AudioSettings.h  AudioSource.h  Prerequisites.h
frag-core/include/Compression/: GZIPCompression.h  ICompression.h  LZ4Compression.h
frag-core/include/Core/: AtomicRefCount.h  Base16.h  Base32.h  Base64.h  Color.h  Environment.h  Event.h  Hash.h  IBase.h  IConfig.h  ILogger.h  Library.h  LinAlg.h  Log.h  Math.h  Math3D.h  Module.h  NoCopyable.h  Object.h  Property.h  Random.h  Ref.h  RefPtr.h  Singleton.h  SmartReference.h  SystemInfo.h  Time.h  Timer.h  UIDGenerator.h  UIDObject.h  UIDStruct.h
frag-core/include/DataStructure/: DisjointSet.h  IMemoryPool.h  ITree.h  Iterator.h  MemoryAddress.h  OctreeTree.h  PoolAllocator.h  QuadTree.h  Queue.h  Stack.h  StackAllactor.h  StackBufferedAllocator.h
frag-core/include/Exception/: IException.h  InvalidArgumentException.h  InvalidPointerException.h  NotImplementedException.h  NotSupportedException.h  PermissionDeniedException.h  RuntimeException.h
frag-core/include/IO/: ASyncIO.h  BZFileIO.h  BufferIO.h  FileAccess.h  FileIO.h  FilePath.h  FileSystem.h  GZFileIO.h  IFileSystem.h  IO.h  IOUtil.h  SocketIO.h  TarFileSystem.h  ZipFileIO.h  ZipFileSystem.h
frag-core/include/Math/: Bitwise.h  CurveUtil.h  Math.h  NormalDistribution.h  Random.h
frag-core/include/Math3D/: AABB.h  BoundingSphere.h  Color.h  Graph.h  LinAlg.h  Line.h  Math3D.h  OBB.h  ONB.h  Plane.h  Ray.h  RayCastHit.h  Shape.h  Transform.h  Triangle.h
frag-core/include/Network/: INetAddress.h  IPAddress.h  IPInterface.h  NetInterface.h  NetSocket.h  Package.h  TCPSocket.h  TCPUDPAddress.h  UDPSocket.h
frag-core/include/Physic/: CharacterController.h  Collider.h  Constraints.h  Contact.h  DynamicObjects.h  PhysicDesc.h  PhysicFactory.h  PhysicInterface.h  PhysicMaterial.h  PhysicObject.h  Prerequisites.h  RayCastHit.h  RigidBody.h  SoftBody.h
frag-core/include/Renderer/: Buffer.h  CommandList.h  FrameBuffer.h  Geometry.h  ICompute.h  IRenderer.h  Prerequisites.h  ProgramPipeline.h  Query.h  RenderDesc.h  RenderObject.h  RenderPipeline.h  RendererFactory.h  RendererWindow.h  Sampler.h  Shader.h  Sync.h  Texture.h  ViewPort.h
frag-core/include/TaskScheduler/: IScheduler.h  IThreading.h
frag-core/include/Threading/: IMutex.h  ISemaphore.h  ISpinLock.h  StdMutex.h  StdSemaphore.h  StdSpinLock.h
frag-core/include/Utils/: CompressUtil.h  CurveUtil.h  EncryptionUtil.h  GeometryUtil.h  RenderTargetFactory.h  ShaderCompiler.h  ShaderUtil.h  StringUtil.h  TextureUtil.h
frag-core/include/Video/: VideoDecoder.h  VideoEncoder.h  VideoFactory.h  VideoManager.h  VideoTexture.h
frag-core/include/Window/: Display.h  Event.h  Window.h  WindowFactory.h  WindowManager.h
frag-core/include/audio/: AudioCapture.h  AudioDesc.h  AudioInterface.h  AudioListener.h  AudioPhysicalDevice.h  AudioSource.h  AudioTypes.h
frag-core/include/physic/: CharacterController.h  Collider.h  Collision.h  Constraints.h  DynamicObjects.h  PhysicDesc.h  PhysicInterface.h  RayCastHit.h  RigidBody.h
frag-core/src/: Font.cpp  FontFactory.cpp  Window.cpp
frag-core/src/audio/: AudioDecoderFactory.cpp  AudioEncoder.cpp  AudioFactory.cpp  VorbisAudioDecoder.cpp  WavAudioDecoder.cpp
frag-core/src/core/: Base64.cpp  Display.cpp  DoubleStackAllocator.cpp  Environment.cpp  Hash.cpp  IConfig.cpp  Library.cpp  Log.cpp  Math.cpp  Module.cpp  Object.cpp  Random.cpp  SmartReference.cpp  StackAllocator.cpp  StackBufferedAllocator.cpp  StdMutex.cpp  StdSemaphore.cpp  SystemInfo.cpp  UIDObject.cpp
frag-core/src/exception/: IException.cpp  InvalidArgumentException.cpp  RunTimeException.cpp
frag-core/src/utils/: ShaderUtil.cpp  (+5 more)
modules/audio/: AudioCapture.h  AudioClip.h  AudioDesc.h  AudioEncoder.h  AudioFactory.cpp  AudioFactory.h  AudioInterface.h  AudioListener.h  AudioObject.h  AudioPhysicalDevice.h  AudioPrerequisites.h  AudioReverb.h  AudioSettings.h  AudioSource.h  AudioTypes.h  CMakeLists.txt  Prerequisites.h
modules/filenotify/: CMakeLists.txt  FileNotify.cpp  FileSystemNotify.cpp  FileSystemNotify.h
modules/font/: CMakeLists.txt  Font.cpp  Font.h  FontEncoding.h  FontFactory.h
modules/geometryutil/: CMakeLists.txt  GeometryUtil.h  GeometryUtility.cpp  ProceduralGeometry.cpp  ProceduralGeometry.h
modules/physic/: CMakeLists.txt  CharacterController.h  Collider.h  Collision.h  Constraints.h  Contact.h  DynamicObjects.h  PhysicDesc.h  PhysicFactory.cpp  PhysicFactory.h  PhysicInterface.h  PhysicMaterial.h  PhysicObject.h  PhysicPrerequisites.h  RayCastHit.h  RigidBody.h  SoftBody.h
modules/renderer/: Buffer.h  CMakeLists.txt  CommandList.h  FrameBuffer.h  Geometry.h  GraphicFormat.h  ICompute.h  IRenderer.h  Query.h  RenderDesc.h  RenderHelper.h  RenderObject.h  RenderPipeline.h  RenderPrerequisites.h  RenderTargetFactory.cpp  RenderTargetFactory.h  RendererFactory.cpp  RendererFactory.h  RendererWindow.h  Sampler.h  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderLanguage.h  ShaderUtil.cpp  ShaderUtil.h  Sync.h  Texture.h  TextureFactory.h  TextureUtil.cpp  TextureUtil.h  ViewPort.h
modules/security/: CMakeLists.txt
modules/videoplayback/: AVAudioDecoder.h  CMakeLists.txt  TextureFactory.cpp  VideoDecoder.h  VideoEncoder.h  VideoFactory.cpp  VideoFactory.h  VideoManager.cpp  VideoManager.h  VideoTexture.cpp  VideoTexture.h
test/assert/: CMakeLists.txt
test/examples/: CMakeLists.txt
(+701 files in other folders)
